[package]
name = "region_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
rayon = "1.9.0"
rust-htslib = { version = "0.45.0", features = ["bzip2", "lzma"], default-features = false }

[dev-dependencies]
cargo-husky = "1.5.0"
